# mtg-outcome-sim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  test-minimal.yml
examples/: tag_overrides_sample.yaml
examples/decks/: sample_commander.txt
src/mtg_outcome_sim/: cli.py
src/mtg_outcome_sim/cards/: mtgjson_cache.py  normalizer.py  scryfall_client.py
src/mtg_outcome_sim/decklist/: parser.py  plain_text.py
src/mtg_outcome_sim/reports/: __init__.py  console.py  json_report.py  markdown.py
src/mtg_outcome_sim/simulation/: hypergeometric.py  mana_model.py  monte_carlo.py  outcome.py
src/mtg_outcome_sim/tags/: classifier.py  default_tags.yaml  schema.py
tests/: test_deck_parser.py  test_hypergeometric.py  test_mana_model.py  test_monte_carlo.py  test_normalizer.py  test_outcomes.py  test_reports.py  test_tag_classifier.py
web/: app.js  build_bundle.py  deck_data.json  default_outcomes.yaml  fetch_card_data.py  index.html  preload.py  sim_bundle.py  style.css  test_e2e.py
