[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtg-outcome-sim"
version = "0.1.0"
description = "Probabilistic MTG deck outcome simulator"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.13",
    "rich>=13.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
mtg-outcome-sim = "mtg_outcome_sim.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
